[project]
name = "db-scratch"
version = "0.1.0"
description = "Disk-backed RDBMS from first principles: B+tree, WAL, MVCC, SQL pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.2",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
db-scratch = "db_scratch.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["db_scratch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
